--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Floating Cards</title>
   <link rel="stylesheet" href="./style/style.css">
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  <main>
+    <!-- Meet Out Team -->
+    <section></section>
+
+    <!-- Elenco schede membri team -->
+    <section></section>
+  </main>
 </body>
 </html>
