--- a/index.html
+++ b/index.html
@@ -14,10 +14,24 @@
 <body>
   <main>
     <!-- Meet Out Team -->
-    <section></section>
+    <section class="meet-our-team">
+      <h1>
+        Meet Our Team
+      </h1>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus earum non maiores deserunt hic atque nemo nisi, in molestiae rem saepe praesentium magni voluptatibus dolorum delectus explicabo tenetur ab quia.
+      </p>
+    </section>
 
     <!-- Elenco schede membri team -->
-    <section></section>
+    <section class="columns-wrapper clearfix">
+      <div class="column-third"></div>
+      <div class="column-third"></div>
+      <div class="column-third"></div>
+      <div class="column-third"></div>
+      <div class="column-third"></div>
+      <div class="column-third"></div>
+    </section>
   </main>
 </body>
 </html>
