intern block team member first profile

--- a/index.html
+++ b/index.html
@@ -25,7 +25,12 @@
 
     <!-- Elenco schede membri team -->
     <section class="columns-wrapper clearfix">
-      <div class="column-third"></div>
+      <div class="column-third">
+        <div class="block first-block clearfix">
+          <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
+          <section></section>
+        </div>
+      </div>
       <div class="column-third"></div>
       <div class="column-third"></div>
       <div class="column-third"></div>
