team member profile text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,17 @@
       <div class="column-third">
         <div class="block first-block clearfix">
           <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
-          <section></section>
+          <section class="text-profile-wrapper">
+            <h2 class="white-text">
+              MARCO BIANCHI
+            </h2>
+            <p class="white-text">
+              Designer
+            </p>
+            <p class="mail">
+              marcobianchi@team.com
+            </p>
+          </section>
         </div>
       </div>
       <div class="column-third"></div>
