--- a/index.html
+++ b/index.html
@@ -18,34 +18,97 @@
       <h1>
         Meet Our Team
       </h1>
-      <p>
+      <p class="main-text">
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus earum non maiores deserunt hic atque nemo nisi, in molestiae rem saepe praesentium magni voluptatibus dolorum delectus explicabo tenetur ab quia.
       </p>
     </section>
 
     <!-- Elenco schede membri team -->
     <section class="columns-wrapper clearfix">
-      <div class="column-third">
-        <div class="block first-block clearfix">
-          <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
-          <section class="text-profile-wrapper">
-            <h2 class="white-text">
-              MARCO BIANCHI
-            </h2>
-            <p class="white-text">
-              Designer
-            </p>
-            <p class="mail">
-              marcobianchi@team.com
-            </p>
-          </section>
-        </div>
+      <div class="block clearfix">
+        <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
+        <section class="text-profile-wrapper">
+          <h2 class="white-text">
+            MARCO BIANCHI
+          </h2>
+          <p class="white-text">
+            Designer
+          </p>
+          <p class="mail">
+            marcobianchi@team.com
+          </p>
+        </section>
       </div>
-      <div class="column-third"></div>
-      <div class="column-third"></div>
-      <div class="column-third"></div>
-      <div class="column-third"></div>
-      <div class="column-third"></div>
+      <div class="block clearfix">
+        <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
+        <section class="text-profile-wrapper">
+          <h2 class="white-text">
+            MARCO BIANCHI
+          </h2>
+          <p class="white-text">
+            Designer
+          </p>
+          <p class="mail">
+            marcobianchi@team.com
+          </p>
+        </section>
+      </div>
+      <div class="block clearfix">
+        <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
+        <section class="text-profile-wrapper">
+          <h2 class="white-text">
+            MARCO BIANCHI
+          </h2>
+          <p class="white-text">
+            Designer
+          </p>
+          <p class="mail">
+            marcobianchi@team.com
+          </p>
+        </section>
+      </div>
+      <div class="block clearfix">
+        <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
+        <section class="text-profile-wrapper">
+          <h2 class="white-text">
+            MARCO BIANCHI
+          </h2>
+          <p class="white-text">
+            Designer
+          </p>
+          <p class="mail">
+            marcobianchi@team.com
+          </p>
+        </section>
+      </div>
+      <div class="block clearfix">
+        <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
+        <section class="text-profile-wrapper">
+          <h2 class="white-text">
+            MARCO BIANCHI
+          </h2>
+          <p class="white-text">
+            Designer
+          </p>
+          <p class="mail">
+            marcobianchi@team.com
+          </p>
+        </section>
+      </div>
+      <div class="block clearfix">
+        <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
+        <section class="text-profile-wrapper">
+          <h2 class="white-text">
+            MARCO BIANCHI
+          </h2>
+          <p class="white-text">
+            Designer
+          </p>
+          <p class="mail">
+            marcobianchi@team.com
+          </p>
+        </section>
+      </div>
     </section>
   </main>
 </body>
