margins between blue blocks

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <!-- Elenco schede membri team -->
     <section class="columns-wrapper clearfix">
-      <div class="block clearfix">
+      <div class="third-column clearfix">
         <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
@@ -39,7 +39,7 @@
           </p>
         </section>
       </div>
-      <div class="block clearfix">
+      <div class="third-column clearfix">
         <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
@@ -53,7 +53,7 @@
           </p>
         </section>
       </div>
-      <div class="block clearfix">
+      <div class="third-column clearfix">
         <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
@@ -67,7 +67,7 @@
           </p>
         </section>
       </div>
-      <div class="block clearfix">
+      <div class="third-column clearfix">
         <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
@@ -81,7 +81,7 @@
           </p>
         </section>
       </div>
-      <div class="block clearfix">
+      <div class="third-column clearfix">
         <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
@@ -95,7 +95,7 @@
           </p>
         </section>
       </div>
-      <div class="block clearfix">
+      <div class="third-column clearfix">
         <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
