--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <!-- Elenco schede membri team -->
     <section class="columns-wrapper clearfix">
+
       <div class="third-column clearfix">
         <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
@@ -39,73 +40,78 @@
           </p>
         </section>
       </div>
+
       <div class="third-column clearfix">
-        <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
+        <img src="./img/female1.png" alt="Laura Rossi photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
-            MARCO BIANCHI
+            LAURA ROSSI
           </h2>
           <p class="white-text">
-            Designer
+            Front-end Developer
           </p>
           <p class="mail">
-            marcobianchi@team.com
+            laurarossi@team.com
           </p>
         </section>
       </div>
+
       <div class="third-column clearfix">
-        <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
+        <img src="./img/male2.png" alt="Giorgio Verdi photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
-            MARCO BIANCHI
+            GIORGIO VERDI
           </h2>
           <p class="white-text">
-            Designer
+            Back-end Developer
           </p>
           <p class="mail">
-            marcobianchi@team.com
+            giorgioverdi@team.com
           </p>
         </section>
       </div>
+
       <div class="third-column clearfix">
-        <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
+        <img src="./img/female2.png" alt="Marta Ipsum photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
-            MARCO BIANCHI
+            MARTA IPSUM
           </h2>
           <p class="white-text">
             Designer
           </p>
           <p class="mail">
-            marcobianchi@team.com
+            martaipsum@team.com
           </p>
         </section>
       </div>
+
       <div class="third-column clearfix">
-        <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
+        <img src="./img/male3.png" alt="Roberto Lorem photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
-            MARCO BIANCHI
+            ROBERTO LOREM
           </h2>
           <p class="white-text">
-            Designer
+            Project Manager
           </p>
           <p class="mail">
-            marcobianchi@team.com
+            robertolorem@team.com
           </p>
         </section>
       </div>
+
       <div class="third-column clearfix">
-        <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
+        <img src="./img/female3.png" alt="Daniela Amet photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
-            MARCO BIANCHI
+            Daniela Amet
           </h2>
           <p class="white-text">
-            Designer
+            Analyst
           </p>
           <p class="mail">
-            marcobianchi@team.com
+            danielaamet@team.com
           </p>
         </section>
       </div>
