--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
     </section>
 
     <!-- Elenco schede membri team -->
-    <section class="columns-wrapper clearfix">
+    <div class="columns-wrapper clearfix">
 
+      <!-- Marco Bianchi -->
       <div class="third-column clearfix">
         <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
@@ -41,6 +42,7 @@
         </section>
       </div>
 
+      <!-- Laura Rossi -->
       <div class="third-column clearfix">
         <img src="./img/female1.png" alt="Laura Rossi photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
@@ -56,6 +58,7 @@
         </section>
       </div>
 
+      <!-- Giorgio Verdi -->
       <div class="third-column clearfix">
         <img src="./img/male2.png" alt="Giorgio Verdi photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
@@ -71,6 +74,7 @@
         </section>
       </div>
 
+      <!-- Marta Ipsum -->
       <div class="third-column clearfix">
         <img src="./img/female2.png" alt="Marta Ipsum photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
@@ -86,6 +90,7 @@
         </section>
       </div>
 
+      <!-- Roberto Lorem -->
       <div class="third-column clearfix">
         <img src="./img/male3.png" alt="Roberto Lorem photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
@@ -101,6 +106,7 @@
         </section>
       </div>
 
+      <!-- Daniela Amet -->
       <div class="third-column clearfix">
         <img src="./img/female3.png" alt="Daniela Amet photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
@@ -115,7 +121,8 @@
           </p>
         </section>
       </div>
-    </section>
+      
+    </div>
   </main>
 </body>
 </html>
