Daniela Amet in caps

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <img src="./img/female3.png" alt="Daniela Amet photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
-            Daniela Amet
+            DANIELA AMET
           </h2>
           <p class="white-text">
             Analyst
@@ -121,7 +121,7 @@
           </p>
         </section>
       </div>
-      
+
     </div>
   </main>
 </body>
