--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="./img/male1.png" alt="Marco Bianchi photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
-            MARCO BIANCHI
+            Marco Bianchi
           </h2>
           <p class="white-text">
             Designer
@@ -47,7 +47,7 @@
         <img src="./img/female1.png" alt="Laura Rossi photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
-            LAURA ROSSI
+            Laura Rossi
           </h2>
           <p class="white-text">
             Front-end Developer
@@ -63,7 +63,7 @@
         <img src="./img/male2.png" alt="Giorgio Verdi photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
-            GIORGIO VERDI
+            Giorgio Verdi
           </h2>
           <p class="white-text">
             Back-end Developer
@@ -79,7 +79,7 @@
         <img src="./img/female2.png" alt="Marta Ipsum photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
-            MARTA IPSUM
+            Marta Ipsum
           </h2>
           <p class="white-text">
             Designer
@@ -95,7 +95,7 @@
         <img src="./img/male3.png" alt="Roberto Lorem photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
-            ROBERTO LOREM
+            Roberto Lorem
           </h2>
           <p class="white-text">
             Project Manager
@@ -111,7 +111,7 @@
         <img src="./img/female3.png" alt="Daniela Amet photo profile" class="photo-profile">
         <section class="text-profile-wrapper">
           <h2 class="white-text">
-            DANIELA AMET
+            Daniela Amet
           </h2>
           <p class="white-text">
             Analyst
